2nd try to turn off duplicated  'Edit on GitHub' link
As it is already available in Read the Docs bottom-left toolbar

--- a/docs/source/_static/css/custom.css
+++ b/docs/source/_static/css/custom.css
@@ -12,3 +12,7 @@ li:not(.toctree-l1),
     border-bottom:    5px solid #869198;
     background-color: inherit;
 }
+
+.fa.fa-github {
+    display: none;
+}
